{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 327,
  "lineage": "8a5d638c-3722-d317-3905-0779a4489cc7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:security-group/sg-038c1b877f6e51d70",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-038c1b877f6e51d70",
            "ingress": [],
            "name": "mba-api-cluster-2024031610444231920000000c",
            "name_prefix": "mba-api-cluster-",
            "owner_id": "891377154570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "mba-api",
              "Name": "mba-api-cluster"
            },
            "tags_all": {
              "Example": "mba-api",
              "Name": "mba-api-cluster",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:security-group/sg-07bda649da6258dcb",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07bda649da6258dcb",
            "ingress": [],
            "name": "mba-api-node-2024031610444231920000000d",
            "name_prefix": "mba-api-node-",
            "owner_id": "891377154570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "mba-api",
              "Name": "mba-api-node",
              "kubernetes.io/cluster/mba-api": "owned"
            },
            "tags_all": {
              "Example": "mba-api",
              "Name": "mba-api-node",
              "environment": "dev",
              "kubernetes.io/cluster/mba-api": "owned",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2089480162",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-038c1b877f6e51d70",
            "security_group_rule_id": "sgr-0a43c23733545bcc6",
            "self": false,
            "source_security_group_id": "sg-07bda649da6258dcb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1294591975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-006f6c7664dcc9c43",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-672882107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-0949ecef0961e9328",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-239420334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-0bfe10a976c961c38",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3339134008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-09bc969d0fd8d7ae5",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3562739737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-0a5145cb058db23ea",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2969185234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-05b086c12f92e0aab",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2023319817",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-0ebc3a9c5bef6a747",
            "self": false,
            "source_security_group_id": "sg-038c1b877f6e51d70",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2932132484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-09582515d1432074b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2327481971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-05faca72c5552bbda",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-786771356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07bda649da6258dcb",
            "security_group_rule_id": "sgr-0f58147e14959c4fa",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:network-acl/acl-031bd60b52fc6f747",
            "default_network_acl_id": "acl-031bd60b52fc6f747",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-031bd60b52fc6f747",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891377154570",
            "subnet_ids": [
              "subnet-007a7dffd6ef911f0",
              "subnet-04c0bf45d6087700e",
              "subnet-09ee8fd426ef856a2",
              "subnet-0a2ec7c424b965fbf",
              "subnet-0a99e45ada26db9ae",
              "subnet-0ce3484d2784f887f"
            ],
            "tags": {
              "Name": "mba-api-default"
            },
            "tags_all": {
              "Name": "mba-api-default",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:route-table/rtb-0a77c978d45b6bfd6",
            "default_route_table_id": "rtb-0a77c978d45b6bfd6",
            "id": "rtb-0a77c978d45b6bfd6",
            "owner_id": "891377154570",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mba-api-default"
            },
            "tags_all": {
              "Name": "mba-api-default",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:security-group/sg-01b1c12e800f10353",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01b1c12e800f10353",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377154570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mba-api-default"
            },
            "tags_all": {
              "Name": "mba-api-default",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f65b2d8200da61c6",
            "domain": "vpc",
            "id": "eipalloc-0f65b2d8200da61c6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-92-187-173.compute-1.amazonaws.com",
            "public_ip": "54.92.187.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mba-api-us-east-1a"
            },
            "tags_all": {
              "Name": "mba-api-us-east-1a",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fd7a614e974b893",
            "domain": "vpc",
            "id": "eipalloc-01fd7a614e974b893",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-24-224-167.compute-1.amazonaws.com",
            "public_ip": "100.24.224.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mba-api-us-east-1b"
            },
            "tags_all": {
              "Name": "mba-api-us-east-1b",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:internet-gateway/igw-076c8786c94f8eb03",
            "id": "igw-076c8786c94f8eb03",
            "owner_id": "891377154570",
            "tags": {
              "Name": "mba-api"
            },
            "tags_all": {
              "Name": "mba-api",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f65b2d8200da61c6",
            "association_id": "eipassoc-0c48b835bded95242",
            "connectivity_type": "public",
            "id": "nat-0513dfdabc3846385",
            "network_interface_id": "eni-0f0e609dd57d11485",
            "private_ip": "10.123.1.19",
            "public_ip": "54.92.187.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce3484d2784f887f",
            "tags": {
              "Name": "mba-api-us-east-1a"
            },
            "tags_all": {
              "Name": "mba-api-us-east-1a",
              "environment": "dev",
              "project": "lanchonete"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fd7a614e974b893",
            "association_id": "eipassoc-0c8e69d9c6113c2c2",
            "connectivity_type": "public",
            "id": "nat-0b954d3c636fe132e",
            "network_interface_id": "eni-0ddb73c8322b2ce22",
            "private_ip": "10.123.2.152",
            "public_ip": "100.24.224.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c0bf45d6087700e",
            "tags": {
              "Name": "mba-api-us-east-1b"
            },
            "tags_all": {
              "Name": "mba-api-us-east-1b",
              "environment": "dev",
              "project": "lanchonete"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e475a6e25e36e441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0513dfdabc3846385",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e475a6e25e36e44",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a90887aeb280385d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b954d3c636fe132e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a90887aeb280385d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-076c8786c94f8eb03",
            "id": "r-rtb-02a7a9fdd9a54f74d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a7a9fdd9a54f74d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:route-table/rtb-01cfcc2e26519409b",
            "id": "rtb-01cfcc2e26519409b",
            "owner_id": "891377154570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mba-api-intra"
            },
            "tags_all": {
              "Name": "mba-api-intra",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:route-table/rtb-09e475a6e25e36e44",
            "id": "rtb-09e475a6e25e36e44",
            "owner_id": "891377154570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mba-api-private-us-east-1a"
            },
            "tags_all": {
              "Name": "mba-api-private-us-east-1a",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:route-table/rtb-0a90887aeb280385d",
            "id": "rtb-0a90887aeb280385d",
            "owner_id": "891377154570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mba-api-private-us-east-1b"
            },
            "tags_all": {
              "Name": "mba-api-private-us-east-1b",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:route-table/rtb-02a7a9fdd9a54f74d",
            "id": "rtb-02a7a9fdd9a54f74d",
            "owner_id": "891377154570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mba-api-public"
            },
            "tags_all": {
              "Name": "mba-api-public",
              "environment": "dev",
              "project": "lanchonete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07adb508180aa2d34",
            "route_table_id": "rtb-01cfcc2e26519409b",
            "subnet_id": "subnet-007a7dffd6ef911f0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d61ad18f8fcf19e8",
            "route_table_id": "rtb-01cfcc2e26519409b",
            "subnet_id": "subnet-0a2ec7c424b965fbf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fab04adf766a340",
            "route_table_id": "rtb-09e475a6e25e36e44",
            "subnet_id": "subnet-09ee8fd426ef856a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074d471660853e683",
            "route_table_id": "rtb-0a90887aeb280385d",
            "subnet_id": "subnet-0a99e45ada26db9ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00855388d19fcb364",
            "route_table_id": "rtb-02a7a9fdd9a54f74d",
            "subnet_id": "subnet-0ce3484d2784f887f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05acda76a803fc9c0",
            "route_table_id": "rtb-02a7a9fdd9a54f74d",
            "subnet_id": "subnet-04c0bf45d6087700e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-007a7dffd6ef911f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a7dffd6ef911f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "mba-api-intra-us-east-1a",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-0a2ec7c424b965fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2ec7c424b965fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "mba-api-intra-us-east-1b",
              "environment": "dev",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-09ee8fd426ef856a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee8fd426ef856a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mba-api-private-us-east-1a",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-0a99e45ada26db9ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99e45ada26db9ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mba-api-private-us-east-1b",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-0ce3484d2784f887f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3484d2784f887f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mba-api-public-us-east-1a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:subnet/subnet-04c0bf45d6087700e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c0bf45d6087700e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377154570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mba-api-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mba-api-public-us-east-1b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "project": "lanchonete"
            },
            "vpc_id": "vpc-0a8a57ab0f5ce54a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377154570:vpc/vpc-0a8a57ab0f5ce54a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-031bd60b52fc6f747",
            "default_route_table_id": "rtb-0a77c978d45b6bfd6",
            "default_security_group_id": "sg-01b1c12e800f10353",
            "dhcp_options_id": "dopt-05b567575f0c5169b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a57ab0f5ce54a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a77c978d45b6bfd6",
            "owner_id": "891377154570",
            "tags": {
              "Name": "mba-api"
            },
            "tags_all": {
              "Name": "mba-api",
              "environment": "dev",
              "project": "lanchonete"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}